ecmascript/parser/tests/typescript-errors/tsc/dynamicImport/importCallExpressionIncorrect1/input.ts.stderr
error: Expected from, got import
 --> $DIR/tests/typescript-errors/tsc/dynamicImport/importCallExpressionIncorrect1/input.ts:8:1
  |
8 | import { foo } from './0';
  | ^^^^^^

